Fix: Replace Susy grid with flexbox to fix sidebar/content overlap

--- a/_sass/_page.scss
+++ b/_sass/_page.scss
@@ -3,24 +3,38 @@
    ========================================================================== */
 
 #main {
-  @include container;
   @include clearfix;
   margin-top: 1em;
   padding-left: 1em;
   padding-right: 1em;
   animation: intro 0.3s both;
   animation-delay: 0.35s;
+  max-width: $large;
+  margin-left: auto;
+  margin-right: auto;
 
-  @include breakpoint($x-large) {
-    max-width: $x-large;
+  @include breakpoint($large) {
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 2em;
+  }
+  margin-left: auto;
+  margin-right: auto;
+
+  @include breakpoint($large) {
+    display: flex;
+    flex-wrap: nowrap;
+    gap: 2em;
+  }
+flex: 1;
+    min-width: 0
   }
 }
 
 .page {
   @include breakpoint($large) {
-    @include span(10 of 12 last);
-    @include prefix(0.5 of 12);
-    @include suffix(0 of 12);
+    flex: 1;
+    min-width: 0;
   }
 
   .page__inner-wrap {
